[package]
name = "bstorage"
version = "0.1.0"
edition = "2021"
authors = ["d.astafyev@outlook.com"]
description = "A lightweight library for working with application configuration files"
license = "Apache-2.0"
keywords = ["config", "fs", "bincode", "settings"]
categories = ["caching", "config", "data-structures", "parsing"]
repository = "https://github.com/icsmw/bstorage.git"
homepage = "https://github.com/icsmw/bstorage"
readme = "README.md"

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
env_logger = "0.11"
log = "0.4"

[dependencies.uuid]
version = "1.8"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
ctor = "0.2"
proptest = "1.4"